idf_component_register(SRCS "main.c" 
                            "../App/Src/App.c" 
                            "../App/Src/Wifi.c" 
                            "../App/Src/HTTP.c" 
                            "../App/Src/CircularBuffer.c" 
                    INCLUDE_DIRS "." "../App/Inc"
                    )
